# DeepReader

./: .env.example  .gitignore  DeepReader项目评审与任务分配.md  README.md  pyproject.toml  requirements.txt  run_dev.sh
docs/: API.md
skills/deep-reader-architect/: SKILL.md
skills/deep-reader-backend/: SKILL.md
skills/deep-reader-frontend/: SKILL.md
src/deep_reader/: core_loop.py  main.py  models.py
src/deep_reader/collector/: arxiv_client.py
src/deep_reader/intelligence/: llm_client.py
src/deep_reader/notifier/: email_service.py
src/deep_reader/server/: app.py  job_store.py
src/deep_reader/storage/: db_manager.py
tests/: manual_test_llm.py  test_api.py  test_collector.py  test_notifier.py  test_storage.py
web/: package-lock.json  package.json
web/app/: page.tsx
web/components/: PaperCard.tsx
web/components/common/: Pagination.tsx
web/components/features/: BrowseFilterBar.tsx  FetchPanel.tsx  JobStatusBanner.tsx  PaperList.tsx
web/hooks/: useJobPolling.ts
web/services/: paperService.ts
web/types/: paper.ts
